--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+    "type": "module",
     "name": "routify-starter",
     "private": true,
     "scripts": {
+        "apimon": "nodemon --exec babel-node api/main.js",
         "dev": "run-p dev:*",
         "dev:routify": "routify",
         "dev:vite": "vite",
+        "dev:api": "node api/main.js",
         "preview": "vite preview",
         "build": "run-s build:*",
         "build:routify": "routify -b",
@@ -14,11 +17,21 @@
         "@roxi/routify": "^2.18.4",
         "@sveltejs/vite-plugin-svelte": "^1.0.0-next.34",
         "autoprefixer": "^10.4.2",
+        "babel-cli": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "nodemon": "^2.0.15",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.5",
         "postcss-import": "^14.0.2",
+        "rimraf": "^3.0.2",
         "svelte": "^3.45.0",
         "svelte-preprocess": "^4.10.1",
         "vite": "^2.7.10"
+    },
+    "dependencies": {
+        "express": "^4.17.3",
+        "node-fetch": "^3.2.3",
+        "svelte-async-readable": "^4.0.2",
+        "utf8": "^3.0.0"
     }
 }
