--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.17.3",
-        "node-fetch": "^3.2.3",
-        "svelte-async-readable": "^4.0.2",
-        "utf8": "^3.0.0"
+        "node-fetch": "^3.2.3"
     }
 }
