--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "dev:routify": "routify -b",
         "dev:vite": "vite --host 0.0.0.0",
         "preview": "vite preview",
-        "build": "rm -rf dist && routify -b && vite build && javascript-obfuscator --output dist dist",
+        "build": "rm -rf dist && routify -b && vite build && javascript-obfuscator --output dist dist && ./inject-analytics-config.sh private/aconf",
         "build-sirv": "npm run build && cd dist && sirv -s",
         "prod:sirv": "cd dist && sirv -s --host 0.0.0.0 -p 8081",
         "prod": "run-p apimon prod:sirv"
