--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.3",
         "node-fetch": "^3.2.3",
-        "openpgp": "^5.2.1"
+        "openpgp": "^5.2.1",
+        "sweetalert": "^2.1.2"
     }
 }
