--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "type": "module",
-    "name": "routify-starter",
+    "name": "sjs",
+    "version": "2.0.7",
     "private": true,
     "scripts": {
+        "api": "babel-node api/main.js",
         "apimon": "nodemon --exec babel-node api/main.js",
         "dev-no-api": "run-p dev:*",
         "dev": "run-p dev:* apimon",
@@ -11,8 +13,8 @@
         "preview": "vite preview",
         "build": "rm -rf dist && routify -b && vite build && javascript-obfuscator --output dist dist && ./inject-analytics-config.sh private/aconf",
         "build-sirv": "npm run build && cd dist && sirv -s",
-        "prod:sirv": "cd dist && sirv -s --host 0.0.0.0 -p 8081",
-        "prod": "run-p apimon prod:sirv"
+        "prod:sirv": "cd dist && sirv -s --host 192.168.30.3 -p 8081",
+        "prod": "run-p api prod:sirv"
     },
     "devDependencies": {
         "@roxi/routify": "^2.18.4",
@@ -21,11 +23,12 @@
         "babel-cli": "^6.26.0",
         "babel-preset-es2015": "^6.24.1",
         "javascript-obfuscator": "^4.0.0",
-        "nodemon": "^2.0.15",
+        "nodemon": "^1.3.3",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.5",
         "postcss-import": "^14.0.2",
         "rimraf": "^3.0.2",
+        "sirv": "^2.0.2",
         "sirv-cli": "^2.0.2",
         "svelte": "^3.45.0",
         "svelte-preprocess": "^4.10.1",
@@ -36,6 +39,7 @@
         "express": "^4.17.3",
         "node-fetch": "^3.2.3",
         "openpgp": "^5.2.1",
+        "run-p": "^0.0.0",
         "sweetalert": "^2.1.2"
     }
 }
